0.05 2023-02-09
  [Fixed Build Process Bug]
    * Fixed a build process bug on Windows.
  [Meta Information Improvement]
    * Added the URL of this repository.
  [Test Improvement]
    * Added Github Action workflows.
0.04 2022-02-08
  [Prerequirement Changes]
    * SPVM 0.9691+ is needed.
0.03 2022-11-14
  [Prerequirement Changes]
    * SPVM::Digest::SHA needs SPVM 0.9661+.
0.02 2022-08-01
  [Internal Ineffective Changes]
    * Use get_field_object_by_name_v2 in SPVM/Digest/SHA.c
    * Use set_field_object_by_name_v2 in SPVM/Digest/SHA.c
  [Pre Requirement Changes]
    * SPVM 0.9632 is needed.
0.01 2022-07-14
  [Changes]
    * First release.
  