@@ -9,10 +9,10 @@ Changes
 lib/SPVM/Digest/SHA.c
 lib/SPVM/Digest/SHA.config
 lib/SPVM/Digest/SHA.native/include/.gitkeep
-lib/SPVM/Digest/SHA.native/include/sha.c
-lib/SPVM/Digest/SHA.native/include/sha.h
-lib/SPVM/Digest/SHA.native/include/sha64bit.c
-lib/SPVM/Digest/SHA.native/include/sha64bit.h
+lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha.c
+lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha.h
+lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha64bit.c
+lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha64bit.h
 lib/SPVM/Digest/SHA.native/src/.gitkeep
 lib/SPVM/Digest/SHA.pm
 lib/SPVM/Digest/SHA.spvm
