@@ -1,6 +1,13 @@
 0.05 2023-02-09
+  [Incompatible Changes]
+    This rename is needed for "[Fixed Build Process Bug]Fixed build process bugs by reading native resouces".
+    renamed:    lib/SPVM/Digest/SHA.native/include/sha.c -> lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha.c
+    renamed:    lib/SPVM/Digest/SHA.native/include/sha.h -> lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha.h
+    renamed:    lib/SPVM/Digest/SHA.native/include/sha64bit.c -> lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha64bit.c
+    renamed:    lib/SPVM/Digest/SHA.native/include/sha64bit.h -> lib/SPVM/Digest/SHA.native/include/SPVM__Digest__SHA__sha64bit.h
   [Fixed Build Process Bug]
     * Fixed a build process bug on Windows.
+    * Fixed build process bugs by reading native resouces.
   [Meta Information Improvement]
     * Added the URL of this repository.
   [Test Improvement]
